# ndc-mcp-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config-http-sample.json  config-sample.json  justfile  servers-http-sample.yaml  servers-sample.yaml
.github/workflows/: build-and-push.yaml
configuration/: config.json  configuration.json  servers.yaml
connector-definition/: connector-metadata.yaml
connector-definition/.hasura-connector/: Dockerfile  connector-metadata.yaml
src/: cli.rs  config.rs  connector.rs  lib.rs  main.rs  schema.rs  state.rs
src/transport/: http.rs  mod.rs  sse.rs  stdio.rs
